--- a/_styles/scss/components/_intro.scss
+++ b/_styles/scss/components/_intro.scss
@@ -30,7 +30,8 @@
     }
   }
 
-  &-casestudy {
+  &-casestudy,
+  &-blog {
     @media (min-width: $bp-row) {
       padding: 0 $spacing-xs;
     }
